# Nmap Changelog ($Id$); -*-text-*-

[NOT YET RELEASED]

o [NSE] Added the qscan script to repeatedly probe ports on a host to
  gather round-trip times for each port.  The script then uses these
  times to group together ports with statistically equivalent RTTs.
  Ports in different groups could be the result of things such as port
  forwarding to hosts behind a NAT.  This is based on work by Doug
  Hoyte.  This script also utilizes the new NSE raw IP sending
  functionality. [Kris]

o [NSE] Added RPC library and three new NFS scripts. Modified the rpcinfo and
  nfs-showmount scripts to use the new library. The new scripts are:
  - nfs-acls shows the owner and directory mode of NFS exports
  - nfs-dirlist lists the contents of NFS exports
  - nfs-statfs shows file system statistics for NFS exports
  [Patrik]

o Fixed the Idle Scan (-sI) so that scanning multiple hosts doesn't
  retest the zombie proxy and reinitialize all of the associated data
  at the beginning of each run. [Kris]

o [NSE] Added jdwp-version.nse, a script from Michael Schierl that
  finds the version of a Java Debug Wire Protocol server.

o Fixed the packaging of x64 versions of WinPcap drivers in the
  winpcap-nmap installer. 64-bit applications that used WinPcap (like
  Wireshark) would fail. [Rob Nicholls]

o Improved the passwords.lst database used by NSE by combining several
  databases collected by Ron Bowes.

o [Ncat] The HTTP proxy server now accepts client connections over
  SSL. That means connections to the proxy can be encrypted and
  authenticated. We haven't found any HTTP clients that directly
  support SSL connections to proxies, but you can use Ncat as a tunnel
  to an SSL-supporting Ncat proxy. This new feature was implemented by
  Markus Klinik.

o [NSE] Added the smtp-enum-users script from Duarte Silva, which
  attempts to find user account names over SMTP.

o ARP requests now work with libpcap Linux "cooked" encapsulation.